# zapio

./: .gitignore  CLAUDE.md  README.md  conftest.py  lint  pyproject.toml  requirements.testing.txt  setup.py  test  test_framework.py  test_toolchain.py
docs/: ESP32-C2-SUPPORT.md  PLATFORM_CONFIG_FORMAT.md  arduino-core-structure.md  build-system.md  daemon-api.md  daemon-test-plan.md  platformio-ini-spec.md  toolchain-packages.md
src/fbuild/: cli.py  cli_utils.py  interrupt_utils.py
src/fbuild/config/: __init__.py  board_config.py  board_loader.py  ini_parser.py
src/fbuild/daemon/: __init__.py  client.py  daemon.py  messages.py  process_tracker.py
src/fbuild/deploy/: __init__.py  deployer.py  deployer_esp32.py  monitor.py
src/fbuild/platform_configs/: esp32.json  esp32c2.json  esp32c3.json  esp32c5.json  esp32c6.json  esp32s3.json
src/zapio/: cli.py  cli_utils.py
src/zapio/config/: __init__.py  board_config.py  board_loader.py  ini_parser.py  mcu_specs.py
src/zapio/daemon/: __init__.py  client.py  daemon.py  messages.py  process_tracker.py
src/zapio/deploy/: __init__.py  deployer.py  deployer_esp32.py  esp32_deployer.py  monitor.py
src/zapio/platform_configs/: esp32p4.json  imxrt1062.json
tests/: LOOP.md  concurrent_deploy_test.py  test_cli.py  test_daemon_stale_status.py
tests/avr/uno/src/: main.ino
tests/esp32p4/: esp32p4.ino  platformio.ini
tests/integration/: __init__.py  test_arduino_uno_build.py
tests/integration/cli/: __init__.py  test_cli_integration.py
tests/teensy40/: README.md  platformio.ini
tests/teensy40/src/: main.ino
tests/teensy41/: README.md  platformio.ini
tests/teensy41/src/: main.ino
tests/unit/cli/: test_build.py  test_cli_utils.py
tests/unit/config/: __init__.py  test_board_config.py  test_ini_parser.py
tests/uno/: platformio.ini  uno.ino
