[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapio"
readme = "README.md"
description = "Modern replacement for PlatformIO with URL-based platform/toolchain management and bug-free architecture"
requires-python = ">=3.10"
keywords = ["embedded", "arduino", "platformio", "compiler", "toolchain", "firmware", "microcontroller"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "pyserial>=3.5",
    "esptool>=4.6.0",
]
# Change this with the version number bump.
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pyright]
# Basic type checking (current default)
typeCheckingMode = "basic"
reportMissingImports = "none"
extraPaths = ["src"]

# Enable useful warnings that catch real bugs
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryCast = "warning"
reportImplicitStringConcatenation = "warning"

[project.scripts]
zap = "zapio.cli:main"